# rohit-samaj

./: .env.example  .gitignore  main.py  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start_debuggers.sh  tailwind.config.js
misc_data/: districts.csv  insert_districts_state_prompt.txt  json_to_csv.py  load_districts_data.sql  local_bodies_with_pin_codes.json  local_bodies_with_pin_codes.json:Zone.Identifier  states.csv  sub_districs_state.json:Zone.Identifier  talukas.csv
rohit_samaj/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/css/: styles.css
static/vendors/: alpine.min.js
survey/: forms.py  models.py  urls.py  views.py
survey/migrations/: 0001_initial.py  0002_samajmember_created_at_samajmember_date_of_birth_and_more.py  0003_remove_samajmemberaddress_taluka_remove_city_taluka_and_more.py  0004_country_iso_country_iso3_country_nicename_and_more.py  0005_samajmemberoccupation_company_city.py  0006_samajmembereducationalqualification_description.py  0007_taluka.py  0008_samajmemberaddress_taluka.py  0009_samajmember_guardian_name.py  0010_alter_samajmembereducationalqualification_city_and_more.py  0011_samajmember_user.py
templates/: auth_base.html  base.html  index.html
templates/account/: login.html  signup.html
templates/components/: card.html  formcard.html
templates/partials/: _navbar.html  _sidebar.html
templates/survey/: form.html  survey_success.html
templates/users/: profile.html
users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
(+91 files in other folders)
